Object Gizmo(s) don't move to new point after curve extrusion, and related crashes (silent exits) #64283

Closed
opened 2019-05-08 03:33:31 +02:00 by Gavin Scott · 5 comments

System Information
Operating system: Windows-10-10.0.17134 64 Bits
Graphics card: GeForce GTX 1060/PCIe/SSE2 NVIDIA Corporation 4.5.0 NVIDIA 419.17

Blender Version
Broken: version: 2.80 (sub 60), branch: master, commit date: 2019-05-07 16:54, hash: 37eb109014

Short description of error
With the Object Move Gizmo enabled and extruding to create new points on a curve, the gizmo does not move to the new point after the extrude, although manipulating it moves the new point, not the ones the gizmo is on (and I've had crashes while playing with it).

Exact steps for others to reproduce the error
New scene, delete the cube, Add a NURBS curve (Bezier has the same behavior I believe)
Edit mode
Select the last point in the curve
Enable the Object Move Gizmo which will show up on the currently selected curve point
Activate the Extrude Cursor tool
Click in the 3dview, note new points are added to the curve but the gizmo does not move to the new point.
Use the gizmo to perform a move and while the gizmo moves relative to its current location, the affected point is actually the most recently created one. When the move completes the gizmo jumps to the correct place.

I had multiple silent exits (no message to stdout/stderr) from Blender while messing around with curves/extrude/move gizmos, either while manipulating the gizmo or clicking to create a new point, but I've been unable to come up with a reproducible sequence of events.

**System Information** Operating system: Windows-10-10.0.17134 64 Bits Graphics card: GeForce GTX 1060/PCIe/SSE2 NVIDIA Corporation 4.5.0 NVIDIA 419.17 **Blender Version** Broken: version: 2.80 (sub 60), branch: master, commit date: 2019-05-07 16:54, hash: `37eb109014` **Short description of error** With the Object Move Gizmo enabled and extruding to create new points on a curve, the gizmo does not move to the new point after the extrude, although manipulating it moves the new point, not the ones the gizmo is on (and I've had crashes while playing with it). **Exact steps for others to reproduce the error** New scene, delete the cube, Add a NURBS curve (Bezier has the same behavior I believe) Edit mode Select the last point in the curve Enable the Object Move Gizmo which will show up on the currently selected curve point Activate the Extrude Cursor tool Click in the 3dview, note **new points are added to the curve but the gizmo does not move to the new point**. Use the gizmo to perform a move and while the gizmo moves relative to its current location, the affected point is actually the most recently created one. When the move completes the gizmo jumps to the correct place. I had multiple silent exits (no message to stdout/stderr) from Blender while messing around with curves/extrude/move gizmos, either while manipulating the gizmo or clicking to create a new point, but I've been unable to come up with a reproducible sequence of events.
Author

Added subscriber: @GavinScott

Added subscriber: @GavinScott

This issue was referenced by 700c69ad08

This issue was referenced by 700c69ad08ab9a542ea19d49fad9f82fce3fe14c

Changed status from 'Open' to: 'Resolved'

Changed status from 'Open' to: 'Resolved'

Added subscriber: @ideasman42

Added subscriber: @ideasman42

Fixed extrude bug, wasn't able to crash - if you can crash this with reproducible steps, please post a new report.

Fixed extrude bug, wasn't able to crash - if you can crash this with reproducible steps, please post a new report.
Sign in to join this conversation.
No Label
Interest
Alembic
Interest
Animation & Rigging
Interest
Asset Browser
Interest
Asset Browser Project Overview
Interest
Audio
Interest
Automated Testing
Interest
Blender Asset Bundle
Interest
BlendFile
Interest
Collada
Interest
Compatibility
Interest
Compositing
Interest
Core
Interest
Cycles
Interest
Dependency Graph
Interest
Development Management
Interest
EEVEE
Interest
EEVEE & Viewport
Interest
Freestyle
Interest
Geometry Nodes
Interest
Grease Pencil
Interest
ID Management
Interest
Images & Movies
Interest
Import Export
Interest
Line Art
Interest
Masking
Interest
Metal
Interest
Modeling
Interest
Modifiers
Interest
Motion Tracking
Interest
Nodes & Physics
Interest
OpenGL
Interest
Overlay
Interest
Overrides
Interest
Performance
Interest
Physics
Interest
Pipeline, Assets & IO
Interest
Platforms, Builds & Tests
Interest
Python API
Interest
Render & Cycles
Interest
Render Pipeline
Interest
Sculpt, Paint & Texture
Interest
Text Editor
Interest
Translations
Interest
Triaging
Interest
Undo
Interest
USD
Interest
User Interface
Interest
UV Editing
Interest
VFX & Video
Interest
Video Sequencer
Interest
Virtual Reality
Interest
Vulkan
Interest
Wayland
Interest
Workbench
Interest: X11
Legacy
Blender 2.8 Project
Legacy
Milestone 1: Basic, Local Asset Browser
Legacy
OpenGL Error
Meta
Good First Issue
Meta
Papercut
Meta
Retrospective
Meta
Security
Module
Animation & Rigging
Module
Core
Module
Development Management
Module
EEVEE & Viewport
Module
Grease Pencil
Module
Modeling
Module
Nodes & Physics
Module
Pipeline, Assets & IO
Module
Platforms, Builds & Tests
Module
Python API
Module
Render & Cycles
Module
Sculpt, Paint & Texture
Module
Triaging
Module
User Interface
Module
VFX & Video
Platform
FreeBSD
Platform
Linux
Platform
macOS
Platform
Windows
Priority
High
Priority
Low
Priority
Normal
Priority
Unbreak Now!
Status
Archived
Status
Confirmed
Status
Duplicate
Status
Needs Info from Developers
Status
Needs Information from User
Status
Needs Triage
Status
Resolved
Type
Bug
Type
Design
Type
Known Issue
Type
Patch
Type
Report
Type
To Do
No Milestone
No project
No Assignees
3 Participants
Notifications
Due Date
The due date is invalid or out of range. Please use the format 'yyyy-mm-dd'.

No due date set.

Dependencies

No dependencies set.

Reference: blender/blender#64283
No description provided.