Fix T64283: Gizmo doesn't update after click-extrude