source/blender/editors/curve/editcurve.c
@@ -5551,6 +5551,8 @@ static int add_vertex_exec(bContext *C, wmOperator *op)
     }
 
     WM_event_add_notifier(C, NC_GEOM | ND_DATA, obedit->data);
+    WM_event_add_notifier(C, NC_GEOM | ND_SELECT, obedit->data);
+
     DEG_id_tag_update(obedit->data, 0);
 
     return OPERATOR_FINISHED;
